--- a/collectors/python.d.plugin/bigquery/bigquery.conf
+++ b/collectors/python.d.plugin/bigquery/bigquery.conf
@@ -74,15 +74,21 @@ example_a:
     credentials: "/tmp/key.json"
     chart_configs:
       - chart_name: "random_data_line"
-        sql: "select rand()*100 as random_positive, rand()*100*-1 random_negative"
-        project_id: "netdata-analytics-bi"
+        chart_title: "some random data"
+        chart_family: "bigquery"
+        chart_context: "bigquery"
         chart_type: "line"
         chart_units: "n"
-      - chart_name: "random_data_stacked"
-        sql: "select rand()*100 as random_1, rand()*100 as random_2"
         project_id: "netdata-analytics-bi"
+        sql: "select rand()*100 as random_positive, rand()*100*-1 as random_negative"
+      - chart_name: "random_data_stacked"
+        chart_title: "some random data stacked"
+        chart_family: "bigquery"
+        chart_context: "bigquery"
         chart_type: "stacked"
         chart_units: "n"
+        project_id: "netdata-analytics-bi"
+        sql: "select rand()*100 as random_1, rand()*100 as random_2"
 
 example_b:
     name: "example_b"
@@ -90,12 +96,18 @@ example_b:
     credentials: "/tmp/key.json"
     chart_configs:
       - chart_name: "random_data_line"
-        sql: "select rand()*100 as random_positive, rand()*100*-1 random_negative"
-        project_id: "netdata-analytics-bi"
+        chart_title: "some random data"
+        chart_family: "bigquery"
+        chart_context: "bigquery"
         chart_type: "line"
         chart_units: "n"
-      - chart_name: "random_data_stacked"
-        sql: "select rand()*100 as random_1, rand()*100 as random_2"
         project_id: "netdata-analytics-bi"
+        sql: "select rand()*100 as random_positive, rand()*100*-1 as random_negative"
+      - chart_name: "random_data_stacked"
+        chart_title: "some random data stacked"
+        chart_family: "bigquery"
+        chart_context: "bigquery"
         chart_type: "stacked"
         chart_units: "n"
+        project_id: "netdata-analytics-bi"
+        sql: "select rand()*100 as random_1, rand()*100 as random_2"
