Add H2O to web servers.

--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -102,7 +102,7 @@ fail2ban: fail2ban*
 # -----------------------------------------------------------------------------
 # web/ftp servers
 
-httpd: apache* httpd nginx* lighttpd hiawatha caddy
+httpd: apache* httpd nginx* lighttpd hiawatha caddy h2o
 proxy: squid* c-icap squidGuard varnish*
 php: php* lsphp*
 ftpd: proftpd in.tftpd vsftpd
