Add ucarp to HA group.
ucarp is a userspace implementation of CARP, a FOSS clone of Cisco's
VRRP. It’s used for automatic failover across routers and between
systems where the exact instance connected to does not matter.

--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -139,7 +139,7 @@ tor: tor
 
 camo: *camo*
 balancer: ipvs_* haproxy
-ha: corosync hs_logd ha_logd stonithd pacemakerd lrmd crmd keepalived
+ha: corosync hs_logd ha_logd stonithd pacemakerd lrmd crmd keepalived ucarp*
 
 # -----------------------------------------------------------------------------
 # telephony
