Split monit and watchdog to their own groups.
Monit is used for a lot more than just network monitoring (it’s also a
service manager, and can even be used as an init system).

‘watchdog’ is a super-generic name, and while there may be some NMS with
that name, it also happens to match a local watchdog device manager (not
unusual on a server), so it really should be it’s own thing.

--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -156,7 +156,8 @@ chat: irssi *vines* *prosody* murmurd
 # monitoring
 
 logs: ulogd* syslog* rsyslog* logrotate systemd-journald rotatelogs
-nms: snmpd vnstatd smokeping zabbix* monit munin* mon openhpid watchdog tailon nrpe
+nms: snmpd vnstatd smokeping zabbix* munin* mon openhpid tailon nrpe
+monit: monit
 splunk: splunkd
 azure: mdsd *waagent* *omiserver* *omiagent* hv_kvp_daemon hv_vss_daemon *auoms* *omsagent*
 datadog: *datadog*
@@ -165,6 +166,7 @@ newrelic: newrelic*
 google-agent: *google_guest_agent* *google_osconfig_agent*
 nvidia-smi: nvidia-smi
 htop: htop
+watchdog: watchdog
 
 # -----------------------------------------------------------------------------
 # storage, file systems and file servers
