Add SFTP tooling to ssh group.

--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -208,7 +208,7 @@ VMs: vbox* VBox* qemu* kvm*
 # -----------------------------------------------------------------------------
 # ssh servers and clients
 
-ssh: ssh* scp dropbear
+ssh: ssh* scp sftp* dropbear
 
 # -----------------------------------------------------------------------------
 # print servers and clients
