Add PTP tooling to time group.

--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -218,7 +218,7 @@ print: cups* lpd lpq
 # -----------------------------------------------------------------------------
 # time servers and clients
 
-time: ntp* systemd-timesyn* chronyd
+time: ntp* systemd-timesyn* chronyd ptp*
 
 # -----------------------------------------------------------------------------
 # dhcp servers and clients
