--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -235,9 +235,13 @@ dnsdist: dnsdist
 # installation / compilation / debugging
 
 build: cc1 cc1plus as gcc* cppcheck ld make cmake automake autoconf autoreconf
-build: cargo rustc bazel buck git gdb valgrind*
+build: cargo rustc bazel buck git gdb valgrind* rpmbuild dpkg-buildpackage
 
-apt: apt*
+# -----------------------------------------------------------------------------
+# package management
+
+packagemanager: apt* dpkg* dselect dnf yum rpm zypp* yast* pacman xbps* swupd* emerge*
+packagemanager: packagekitd pkgin pkg apk
 
 # -----------------------------------------------------------------------------
 # antivirus
@@ -319,7 +323,7 @@ zswap: zswap
 kcompactd: kcompactd
 
 system: systemd-* udisks* udevd* *udevd ipv6_addrconf dbus-* rtkit*
-system: inetd xinetd mdadm polkitd acpid uuidd packagekitd upowerd colord
+system: inetd xinetd mdadm polkitd acpid uuidd upowerd colord
 system: accounts-daemon rngd haveged
 
 kernel: kworker kthreadd kauditd lockd khelper kdevtmpfs khungtaskd rpciod
