Update media grouping.
Adds clementine and strawberry music players, and also creates a new
group called audio that includes pulseaudio, pipewire, and jack tooling.

--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -273,6 +273,9 @@ ups: upsmon upsd */nut/* apcupsd
 
 media: mplayer vlc xine mediatomb omxplayer* kodi* xbmc* mediacenter eventlircd
 media: mpd minidlnad mt-daapd avahi* Plex* jellyfin squeeze* jackett Ombi
+media: strawberry* clementine*
+
+audio: pulse* pipewire wireplumber jack*
 
 # -----------------------------------------------------------------------------
 # java applications
