Rename X group to gui and expand it.
Moves colord to gui group, adds seatd (used with some wayland
compositors), greetd (a popular display-manager equivalent for wayland
setups), and a couple of popular wayland-native compositors.

--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -307,13 +307,14 @@ solr: *solr.install.dir*
 airflow: *airflow*
 
 # -----------------------------------------------------------------------------
-# X
+# GUI
 
-X: X Xorg xinit lightdm xdm pulseaudio gkrellm xfwm4 xfdesktop xfce* Thunar
-X: xfsettingsd xfconfd gnome-* gdm gconf* dconf* xfconf* *gvfs gvfs* slim
-X: kdeinit* kdm plasmashell
-X: evolution-* firefox chromium opera vivaldi-bin epiphany WebKit*
-X: '*systemd --user*' chrome *chrome-sandbox* *google-chrome* *chromium* *firefox*
+gui: X Xorg xinit lightdm xdm gkrellm xfwm4 xfdesktop xfce* Thunar
+gui: xfsettingsd xfconfd gnome-* gdm gconf* dconf* xfconf* *gvfs gvfs* slim
+gui: kdeinit* kdm plasmashell
+gui: evolution-* firefox chromium opera vivaldi-bin epiphany WebKit*
+gui: '*systemd --user*' chrome *chrome-sandbox* *google-chrome* *chromium* *firefox*
+gui: colord seatd greetd wayfire sway weston cage
 
 # -----------------------------------------------------------------------------
 # Kernel / System
@@ -326,7 +327,7 @@ zswap: zswap
 kcompactd: kcompactd
 
 system: systemd-* udisks* udevd* *udevd ipv6_addrconf dbus-* rtkit*
-system: inetd xinetd mdadm polkitd acpid uuidd upowerd colord
+system: inetd xinetd mdadm polkitd acpid uuidd upowerd
 system: accounts-daemon rngd haveged
 
 kernel: kworker kthreadd kauditd lockd khelper kdevtmpfs khungtaskd rpciod
