Update system and logging groups
- Add sysklogd and metalog to logs group.
- Split inetd and xinetd to their own group.
- Add a number of common system services to the system group.
- Add common service management tooling to the system group (covering
  OpenRC and runit).

--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -155,7 +155,7 @@ chat: irssi *vines* *prosody* murmurd
 # -----------------------------------------------------------------------------
 # monitoring
 
-logs: ulogd* syslog* rsyslog* logrotate systemd-journald rotatelogs
+logs: ulogd* syslog* rsyslog* logrotate systemd-journald rotatelogs sysklogd metalog
 nms: snmpd vnstatd smokeping zabbix* munin* mon openhpid tailon nrpe
 monit: monit
 splunk: splunkd
@@ -327,12 +327,18 @@ zswap: zswap
 kcompactd: kcompactd
 
 system: systemd-* udisks* udevd* *udevd ipv6_addrconf dbus-* rtkit*
-system: inetd xinetd mdadm polkitd acpid uuidd upowerd
-system: accounts-daemon rngd haveged
+system: mdadm polkitd acpid uuidd upowerd elogind eudev mdev lvmpolld dmeventd
+system: accounts-daemon rngd haveged rasdaemon irqbalance start-stop-daemon
+system: supervise-daemon openrc* init runit runsvdir runsv
 
 kernel: kworker kthreadd kauditd lockd khelper kdevtmpfs khungtaskd rpciod
 kernel: fsnotify_mark kthrotld deferwq scsi_* kdmflush oom_reaper kdevtempfs
 kernel: ksoftirqd
+
+# -----------------------------------------------------------------------------
+# inetd
+
+inetd: inetd xinetd
 
 # -----------------------------------------------------------------------------
 # other application servers
