Add libvirt group.

--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -204,6 +204,8 @@ proxmox-ve: pve* spiceproxy
 
 containers: lxc* docker* balena*
 VMs: vbox* VBox* qemu* kvm*
+libvirt: virtlogd virtqemud virtstoraged virtnetworkd virtlockd virtinterfaced
+libvirt: virtnodedevd virtproxyd virtsecretd libvirtd
 
 # -----------------------------------------------------------------------------
 # ssh servers and clients
