Add dhclient to dhcp group.

--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -226,7 +226,7 @@ time: ntp* systemd-timesyn* chronyd ptp*
 # -----------------------------------------------------------------------------
 # dhcp servers and clients
 
-dhcp: *dhcp*
+dhcp: *dhcp* dhclient
 
 # -----------------------------------------------------------------------------
 # name servers and clients
