Add printing group covering CUPS and lpd.

--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -344,6 +344,11 @@ kernel: ksoftirqd
 inetd: inetd xinetd
 
 # -----------------------------------------------------------------------------
+# printing
+
+printing: cups* lpd
+
+# -----------------------------------------------------------------------------
 # other application servers
 
 consul: consul
