Categorize Avahi correctly (it’s DNS and SLAAC, not media).

--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -131,7 +131,7 @@ vpn: openvpn pptp* cjdroute gvpe tincd wireguard tailscaled
 wifi: hostapd wpa_supplicant
 routing: ospfd* ospf6d* bgpd bfdd fabricd isisd eigrpd sharpd staticd ripd ripngd pimd pbrd nhrpd ldpd zebra vrrpd vtysh bird*
 modem: ModemManager
-netmanager: NetworkManager nm* systemd-networkd networkctl netplan connmand wicked*
+netmanager: NetworkManager nm* systemd-networkd networkctl netplan connmand wicked* avahi-autoipd
 tor: tor
 
 # -----------------------------------------------------------------------------
@@ -231,7 +231,7 @@ dhcp: *dhcp* dhclient
 # -----------------------------------------------------------------------------
 # name servers and clients
 
-dns: named unbound nsd pdns_server knotd gdnsd yadifad dnsmasq systemd-resolve* pihole*
+dns: named unbound nsd pdns_server knotd gdnsd yadifad dnsmasq systemd-resolve* pihole* avahi-daemon avahi-dnsconfd
 dnsdist: dnsdist
 
 # -----------------------------------------------------------------------------
@@ -275,7 +275,7 @@ ups: upsmon upsd */nut/* apcupsd
 # media players, servers, clients
 
 media: mplayer vlc xine mediatomb omxplayer* kodi* xbmc* mediacenter eventlircd
-media: mpd minidlnad mt-daapd avahi* Plex* jellyfin squeeze* jackett Ombi
+media: mpd minidlnad mt-daapd Plex* jellyfin squeeze* jackett Ombi
 media: strawberry* clementine*
 
 audio: pulse* pipewire wireplumber jack*
