Add filesync group.
Covering Dropbox and Syncthing.

--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -398,3 +398,8 @@ locust: locust
 # data science and machine learning tools
 
 jupyter: jupyter*
+
+# -----------------------------------------------------------------------------
+# File synchronization tools
+
+filesync: dropbox syncthing
