Even more common services.

--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -96,7 +96,7 @@ agent_sd: agent_sd
 # -----------------------------------------------------------------------------
 # authentication/authorization related servers
 
-auth: radius* openldap* ldap* slapd authelia
+auth: radius* openldap* ldap* slapd authelia sssd saslauthd polkitd gssproxy
 fail2ban: fail2ban*
 
 # -----------------------------------------------------------------------------
@@ -121,7 +121,7 @@ columndb: clickhouse-server*
 # -----------------------------------------------------------------------------
 # email servers
 
-email: dovecot imapd pop3d amavis* zmstat-* zmdiaglog zmmailboxdmgr saslauthd opendkim postfwd2 smtp* lmtp* sendmail postfix master pickup qmgr showq tlsmgr postscreen oqmgr msmtp* nullmailer*
+email: dovecot imapd pop3d amavis* zmstat-* zmdiaglog zmmailboxdmgr opendkim postfwd2 smtp* lmtp* sendmail postfix master pickup qmgr showq tlsmgr postscreen oqmgr msmtp* nullmailer*
 
 # -----------------------------------------------------------------------------
 # network, routing, VPN
@@ -131,7 +131,8 @@ vpn: openvpn pptp* cjdroute gvpe tincd wireguard tailscaled
 wifi: hostapd wpa_supplicant
 routing: ospfd* ospf6d* bgpd bfdd fabricd isisd eigrpd sharpd staticd ripd ripngd pimd pbrd nhrpd ldpd zebra vrrpd vtysh bird*
 modem: ModemManager
-netmanager: NetworkManager nm* systemd-networkd networkctl netplan connmand wicked* avahi-autoipd
+netmanager: NetworkManager nm* systemd-networkd networkctl netplan connmand wicked* avahi-autoipd networkd-dispatcher
+firewall: firewalld ufw nft
 tor: tor
 
 # -----------------------------------------------------------------------------
@@ -244,7 +245,7 @@ build: cargo rustc bazel buck git gdb valgrind* rpmbuild dpkg-buildpackage
 # package management
 
 packagemanager: apt* dpkg* dselect dnf yum rpm zypp* yast* pacman xbps* swupd* emerge*
-packagemanager: packagekitd pkgin pkg apk
+packagemanager: packagekitd pkgin pkg apk snapd
 
 # -----------------------------------------------------------------------------
 # antivirus
@@ -330,9 +331,10 @@ zswap: zswap
 kcompactd: kcompactd
 
 system: systemd-* udisks* udevd* *udevd ipv6_addrconf dbus-* rtkit*
-system: mdadm polkitd acpid uuidd upowerd elogind eudev mdev lvmpolld dmeventd
+system: mdadm acpid uuidd upowerd elogind* eudev mdev lvmpolld dmeventd
 system: accounts-daemon rngd haveged rasdaemon irqbalance start-stop-daemon
-system: supervise-daemon openrc* init runit runsvdir runsv
+system: supervise-daemon openrc* init runit runsvdir runsv auditd lsmd
+system: abrt* nscd
 
 kernel: kworker kthreadd kauditd lockd khelper kdevtmpfs khungtaskd rpciod
 kernel: fsnotify_mark kthrotld deferwq scsi_* kdmflush oom_reaper kdevtempfs
