Add new bluetooth group.

--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -134,6 +134,7 @@ modem: ModemManager
 netmanager: NetworkManager nm* systemd-networkd networkctl netplan connmand wicked* avahi-autoipd networkd-dispatcher
 firewall: firewalld ufw nft
 tor: tor
+bluetooth: bluetooth bluez bluedevil obexd
 
 # -----------------------------------------------------------------------------
 # high availability and balancers
