Updates based on review comments.

--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -246,7 +246,7 @@ build: cargo rustc bazel buck git gdb valgrind* rpmbuild dpkg-buildpackage
 # package management
 
 packagemanager: apt* dpkg* dselect dnf yum rpm zypp* yast* pacman xbps* swupd* emerge*
-packagemanager: packagekitd pkgin pkg apk snapd
+packagemanager: packagekitd pkgin pkg apk snapd slackpkg slapt-get
 
 # -----------------------------------------------------------------------------
 # antivirus
@@ -316,7 +316,7 @@ airflow: *airflow*
 
 gui: X Xorg xinit lightdm xdm gkrellm xfwm4 xfdesktop xfce* Thunar
 gui: xfsettingsd xfconfd gnome-* gdm gconf* dconf* xfconf* *gvfs gvfs* slim
-gui: kdeinit* kdm plasmashell
+gui: *kdeinit* kdm plasmashell
 gui: evolution-* firefox chromium opera vivaldi-bin epiphany WebKit*
 gui: '*systemd --user*' chrome *chrome-sandbox* *google-chrome* *chromium* *firefox*
 gui: colord seatd greetd wayfire sway weston cage
