--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -354,7 +354,7 @@ system: systemd-* udisks* udevd* *udevd ipv6_addrconf dbus-* rtkit*
 system: mdadm acpid uuidd upowerd elogind* eudev mdev lvmpolld dmeventd
 system: accounts-daemon rngd haveged rasdaemon irqbalance start-stop-daemon
 system: supervise-daemon openrc* init runit runsvdir runsv auditd lsmd
-system: abrt* nscd rtkit-daemon gpg-agent
+system: abrt* nscd rtkit-daemon gpg-agent usbguard*
 
 kernel: kworker kthreadd kauditd lockd khelper kdevtmpfs khungtaskd rpciod
 kernel: fsnotify_mark kthrotld deferwq scsi_* kdmflush oom_reaper kdevtempfs
