--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -337,7 +337,7 @@ gui: lightdm colord seatd greetd gkrellm slim qingy dconf* *gvfs gvfs*
 gui: '*systemd --user*' xdg-* at-spi-*
 
 webbrowser: *chrome-sandbox* *google-chrome* *chromium* *firefox* vivaldi* opera* epiphany
-webbrowser: lynx elinks w3m w3mmee
+webbrowser: lynx elinks w3m w3mmee links
 mua: evolution-* thunderbird* mutt neomutt pine mailx alpine
 
 # -----------------------------------------------------------------------------
